--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <select class="breed-select"></select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+    <select class="breed-select hide"></select>
+    <p class="loader photo hide"></p>
+    <!-- <p class="error"></p> -->
     <div class="cat-info"></div>
 
     <script src="index.js" type="module"></script>
