--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <select class="breed-select hide"></select>
-    <p class="loader photo hide"></p>
+    <select class="breed-select"></select>
+    <div class="loader centered"></div>
     <!-- <p class="error"></p> -->
     <div class="cat-info"></div>
 
